--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"@angular/platform-browser": "^12.2.5",
 		"@angular/platform-browser-dynamic": "^12.2.5",
 		"@angular/router": "^12.2.5",
-		"@ngneat/reactive-forms": "^1.7.4",
+		"@ngneat/until-destroy": "^8.1.4",
 		"@nrwl/angular": "^12.9.0",
 		"firebase": "^9.0.2",
 		"ngx-logger": "^4.3.3",
