--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "tlt-trivia",
-	"version": "0.0.0",
-	"license": "MIT",
+	"version": "1.0.0",
+	"license": "UNLICENSED",
 	"scripts": {
 		"ng": "nx",
 		"postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
